--- a/institution_angular/src/app/pages/home/home.component.html
+++ b/institution_angular/src/app/pages/home/home.component.html
@@ -5,9 +5,12 @@
         <a (click)="drawer.toggle()" class="menu-toggle rounded" [routerLink]=""><i class="bi bi-list" ></i></a>
 
         <br><br><br>
-        <div class="menu">
+        <div class="menu" id="menu-public">
             <app-auth></app-auth>
             <a [routerLink]>Login <i class="icon-login"></i></a>
+        </div>
+            <!--        menu for admin-->
+        <div class="menu" id="menu-admin">
             <a [routerLink] (click)="logout()">Logout <i class="icon-login"></i></a>
         </div>
 
