Owner is working

--- a/institution_angular/src/app/pages/home/home.component.html
+++ b/institution_angular/src/app/pages/home/home.component.html
@@ -24,6 +24,7 @@
 <!--        </button>-->
 <!--    </div>-->
 
+    <router-outlet></router-outlet>
     <app-top></app-top>
     <section class="content-section bg-primary text-white text-center" id="services">
         <div class="container px-4 px-lg-5">
