working on menu

--- a/institution_angular/src/app/pages/home/auth/auth.component.html
+++ b/institution_angular/src/app/pages/home/auth/auth.component.html
@@ -13,7 +13,8 @@
                     <input class="p-1" type="password" formControlName="password" matInput placeholder="Password" style="border-radius: 5px;">
                 </div>
                 <div class="p-2">
-                    <button mat-raised-button (click)="loginUser()">Login</button>
+                    <button mat-raised-button style="color: green" (click)="loginUser()">Login<i class="ri-login-circle-line" ></i>
+                    </button>
                 </div>
             </div>
         </form>
