--- a/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
@@ -1,1 +1,48 @@
-<p>menu-owner works!</p>
+
+
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-dark">-->
+<!--    <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+<!--        <ul class="navbar-nav mr-auto">-->
+<!--            <li class="nav-item dropdown">-->
+<!--                <a mat-raised-button color="warn" class="nav-link" [matMenuTriggerFor]="menu">Master<i class="bi bi-caret-down-fill"></i></a>-->
+<!--                <mat-menu #menu="matMenu">-->
+<!--                    <button mat-menu-item [routerLink]="['/customer']" routerLinkActive="MyActiveMenu">Customer</button>-->
+<!--                    <button mat-menu-item [routerLink]="['/product']" routerLinkActive="MyActiveMenu">Product</button>-->
+<!--                    <button mat-menu-item [routerLink]="['/rate']" routerLinkActive="MyActiveMenu">Rate</button>-->
+<!--                    <button mat-menu-item [routerLink]="['/agent']" routerLinkActive="MyActiveMenu">Agent</button>-->
+<!--                </mat-menu>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</nav>-->
+
+<div>
+    <ul role="menubar">
+        <li *ngFor="let link of menu; let i = index;">
+
+            <a
+                    [attr.href]="link.href ? link.href : null"
+                    [attr.target]="link.target ? link.target : null"
+                    aria-role="menuitem"
+                    [attr.ariaExpanded]="link.navigationItems && openElements[i] ? true : null"
+                    [attr.ariaHasPopup]="link.navigationItems ? true : null"
+                    (click)="link.navigationItems ? openElements[i] = !openElements[i] : null"
+                    [class]="openElements[i] ? 'open' : null"
+            >
+                {{link.title}}
+            </a>
+
+            <ul *ngIf="link.navigationItems" role="menu">
+                <li *ngFor="let link of link.navigationItems">
+                    <a [attr.href]="link.url"
+                       [innerHTML]="link.title"
+                       [attr.target]="link.target ? link.target : null"
+                       role="menuitem"
+                    >
+                    </a>
+                </li>
+            </ul>
+
+        </li>
+    </ul>
+</div>
