material icon is working

--- a/institution_angular/src/app/pages/home/home.component.html
+++ b/institution_angular/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
         <a (click)="drawer.toggle()" class="menu-toggle rounded" [routerLink]=""><i class="bi bi-list" ></i></a>
 
         <br><br><br>
-
+        <mat-icon aria-hidden="false" aria-label="Example home icon">home</mat-icon>
         <app-menu></app-menu>
 
     </mat-drawer>
