--- a/institution_angular/src/app/pages/home/menu/menu.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu.component.html
@@ -1,4 +1,4 @@
-
+<mat-icon aria-hidden="false" aria-label=" filter icon">filter_alt</mat-icon>
 <app-menu-public *ngIf="!authService.isAuthenticated()"></app-menu-public>
 <div *ngIf="authService.isAuthenticated()">
 <app-menu-owner></app-menu-owner>
