--- a/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
@@ -1,24 +1,8 @@
-<!--<nav class="navbar navbar-expand-lg navbar-light">-->
-<!--    <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--        <ul class="navbar-nav mr-auto">-->
-<!--            <li class="nav-item dropdown">-->
-<!--                <a mat-raised-button color="warn" class="nav-link" [matMenuTriggerFor]="menu">Master<i class="bi bi-caret-down-fill"></i></a>-->
-<!--                <mat-menu #menu="matMenu">-->
-<!--                    <button mat-menu-item [routerLink]="['/customer']" routerLinkActive="MyActiveMenu">Customer</button>-->
-<!--                    <button mat-menu-item [routerLink]="['/product']" routerLinkActive="MyActiveMenu">Product</button>-->
-<!--                    <button mat-menu-item [routerLink]="['/rate']" routerLinkActive="MyActiveMenu">Rate</button>-->
-<!--                    <button mat-menu-item [routerLink]="['/agent']" routerLinkActive="MyActiveMenu">Agent</button>-->
-<!--                </mat-menu>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--    </div>-->
-<!--</nav>-->
-
-
-<mat-toolbar color="primary">
-    TopNav Menu Navigation Example
-</mat-toolbar>
-<mat-toolbar class="menu-bar mat-elevation-z1">
+<div class="basic-container">
+    <mat-toolbar color="primary">
+        TopNav Menu Navigation Example
+    </mat-toolbar>
+    <mat-toolbar class="menu-bar mat-elevation-z1">
     <span *ngFor="let item of navItems">
       <!-- Handle branch node buttons here -->
       <span *ngIf="item.children && item.children.length > 0">
@@ -35,55 +19,5 @@
         </button>
       </span>
     </span>
-</mat-toolbar>
-
-<div *ngFor="let link of menu; let i = index;">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a mat-raised-button color="warn" class="nav-link" [matMenuTriggerFor]="menu">{{link.title}}
-                        <i class="bi bi-caret-down-fill"></i>
-                    </a>
-                    <mat-menu #menu="matMenu">
-                        <button mat-menu-item [routerLink]="['/customer']" routerLinkActive="MyActiveMenu">Customer</button>
-                        <button mat-menu-item [routerLink]="['/product']" routerLinkActive="MyActiveMenu">Product</button>
-                        <button mat-menu-item [routerLink]="['/rate']" routerLinkActive="MyActiveMenu">Rate</button>
-                        <button mat-menu-item [routerLink]="['/agent']" routerLinkActive="MyActiveMenu">Agent</button>
-                    </mat-menu>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    </mat-toolbar>
 </div>
-
-<!--<nav class="navbar navbar-expand-lg navbar-light ">-->
-<!--    <ul role="menubar" class="navbar-nav mr-auto">-->
-<!--        <li *ngFor="let link of menu; let i = index;" class="nav-item dropdown">-->
-
-<!--            <a-->
-<!--                    [attr.href]="link.href ? link.href : null"-->
-<!--                    [attr.target]="link.target ? link.target : null"-->
-<!--                    aria-role="menuitem"-->
-<!--                    [attr.ariaExpanded]="link.navigationItems && openElements[i] ? true : null"-->
-<!--                    [attr.ariaHasPopup]="link.navigationItems ? true : null"-->
-<!--                    (click)="link.navigationItems ? openElements[i] = !openElements[i] : null"-->
-<!--                    [class]="openElements[i] ? 'open' : null"-->
-<!--            >-->
-<!--                {{link.title}}-->
-<!--            </a>-->
-
-<!--            <ul *ngIf="link.navigationItems" role="menu">-->
-<!--                <li *ngFor="let link of link.navigationItems">-->
-<!--                    <a [attr.href]="link.url"-->
-<!--                       [innerHTML]="link.title"-->
-<!--                       [attr.target]="link.target ? link.target : null"-->
-<!--                       role="menuitem"-->
-<!--                    >-->
-<!--                    </a>-->
-<!--                </li>-->
-<!--            </ul>-->
-
-<!--        </li>-->
-<!--    </ul>-->
-<!--</nav>-->
