--- a/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
@@ -1,23 +1,21 @@
 <div class="basic-container">
-    <mat-toolbar color="primary">
-        TopNav Menu Navigation Example
-    </mat-toolbar>
-    <mat-toolbar class="menu-bar mat-elevation-z1">
-    <span *ngFor="let item of navItems">
+    <div class="menu-bar mat-elevation-z1">
+    <div class="container" fxFill *ngFor="let item of navItems">
       <!-- Handle branch node buttons here -->
-      <span *ngIf="item.children && item.children.length > 0">
-        <button mat-button [matMenuTriggerFor]="menu.childMenu"
+      <div fxFlex="25" fxLayour="column" *ngIf="item.children && item.children.length > 0">
+        <button mat-button [matMenuTriggerFor]="menu.childMenu" style="border-radius: 10px; width: 150px;"
                 [disabled]="item.disabled">
           {{item.displayName}}
         </button>
         <app-menu-item #menu [items]="item.children"></app-menu-item>
-      </span>
+      </div>
         <!-- Leaf node buttons here -->
-      <span *ngIf="!item.children || item.children.length === 0">
+      <div fxFlex="25" fxLayour="column" *ngIf="!item.children || item.children.length === 0">
         <button mat-button color="primary" [routerLink]="item.route">
           {{item.displayName}}
         </button>
-      </span>
-    </span>
-    </mat-toolbar>
+      </div>
+    </div>
+    </div>
 </div>
+
