working on menus

--- a/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
@@ -2,7 +2,7 @@
     <div class="menu-bar mat-elevation-z1">
     <div class="container" fxFill *ngFor="let item of navItems">
       <!-- Handle branch node buttons here -->
-      <div fxFlex="25" fxLayour="column" *ngIf="item.children && item.children.length > 0">
+      <div class="p-1" *ngIf="item.children && item.children.length > 0">
         <button mat-button [matMenuTriggerFor]="menu.childMenu" style="border-radius: 10px; width: 150px;"
                 [disabled]="item.disabled">
           {{item.displayName}}
@@ -10,7 +10,7 @@
         <app-menu-item #menu [items]="item.children"></app-menu-item>
       </div>
         <!-- Leaf node buttons here -->
-      <div fxFlex="25" fxLayour="column" *ngIf="!item.children || item.children.length === 0">
+      <div  *ngIf="!item.children || item.children.length === 0">
         <button mat-button color="primary" [routerLink]="item.route">
           {{item.displayName}}
         </button>
