--- a/institution_angular/src/styles.scss
+++ b/institution_angular/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~@ng-select/ng-select/scss/material.theme";
-
+@import "~aos/dist/aos.css";
 
 
 html, body { height: 100%; }
