section are separated

--- a/institution_angular/src/app/pages/home/home.component.html
+++ b/institution_angular/src/app/pages/home/home.component.html
@@ -41,256 +41,9 @@
         <div class="item" data-aos="flip-right" data-aos-delay="800">10</div>
         <div class="item" data-aos="flip-left" data-aos-delay="800">11</div>
     </section>
-    <section id="why-us" class="why-us">
-        <div class="container" data-aos="fade-up">
-
-            <div class="row">
-                <div class="col-lg-4 d-flex align-items-stretch">
-                    <div class="content">
-                        <h3>Why Choose CODER?</h3>
-                        <p>
-                            Mordern infrastructure with best guidance.
-                            A natural ability to do or learn something well and easily.
-                            An ability to make the material being taught stimulating and interesting.
-                            A facility for engaging with students at their level of understanding.
-                        </p>
-                        <div class="text-center">
-                            <a href="about.html" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-                    <div class="icon-boxes d-flex flex-column justify-content-center">
-                        <div class="row">
-                            <div class="col-xl-4 d-flex align-items-stretch">
-                                <div class="icon-box mt-4 mt-xl-0">
-                                    <i class="bi bi-tv"></i>
-                                    <h4 style="padding-top: 50px;">Learn Computer</h4>
-                                    <p>
-                                        Identify what you need to learn.
-                                        Start with the basics—and ensure you know how to use a computer.
-                                        Familiarize yourself with an understanding of how computers (and the Internet) work.
-                                        Take a computer course.
-                                        Apply the knowledge and get hands-on practice.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-xl-4 d-flex align-items-stretch">
-                                <div class="icon-box mt-4 mt-xl-0">
-                                    <i class="bi bi-person-fill"></i>
-                                    <h4 style="padding-top: 50px;">Get Best Guidance</h4>
-                                    <p>
-                                        Visualization, Bring the all academic concepts to life with visual and practical learning experiences, helping your students to understand how their schooling applies in the real-world.
-                                        Cooperative learning.
-                                        Inquiry-based instruction.
-                                        Differentiation.
-                                        Technology in the classroom.
-                                        Professional development.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-xl-4 d-flex align-items-stretch">
-                                <div class="icon-box mt-4 mt-xl-0">
-                                    <i class="bi bi-trophy"></i>
-                                    <h4 style="padding-top: 50px;">Achievement</h4>
-                                    <p>
-                                        Done your courses successfully with effort, skill, or courage.
-                                        Re-organized something to make it work better.
-                                        Received certificates of your achievement.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div><!-- End .content-->
-                </div>
-            </div>
-
-        </div>
-    </section><!-- End Why Us Section -->
-    <section id="features" class="features">
-        <div class="container" data-aos="fade-up">
-
-            <div class="row" data-aos="zoom-in" data-aos-delay="100">
-                <div class="col-lg-3 col-md-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-store-line" style="color: #ffbb2c;"></i> -->
-                        <img src="assets/img/html.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">HTML</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                    <div class="icon-box">
-                        <!-- <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i> -->
-                        <img src="assets/img/c.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">C-Language</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-                    <div class="icon-box">
-                        <!-- <i class="ri-calendar-todo-line" style="color: #e80368;"></i> -->
-                        <img src="assets/img/cpp.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3  style="padding-left: 20px;"><a href="">C++ Language</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
-                    <div class="icon-box">
-                        <!-- <i class="ri-paint-brush-line" style="color: #e361ff;"></i> -->
-                        <img src="assets/img/java.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">JAVA</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-database-2-line" style="color: #47aeff;"></i> -->
-                        <img src="assets/img/python.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">PYTHON</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-gradienter-line" style="color: #ffa76e;"></i> -->
-                        <img src="assets/img/js.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">Java Script</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-file-list-3-line" style="color: #11dbcf;"></i> -->
-                        <img src="assets/img/sql.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">SQL</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-price-tag-2-line" style="color: #4233ff;"></i> -->
-                        <img src="assets/img/vsc.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">Visual Studio Code</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-anchor-line" style="color: #b2904f;"></i> -->
-                        <img src="assets/img/php.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">php storm</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-disc-line" style="color: #b20969;"></i> -->
-                        <img src="assets/img/webstorm.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3  style="padding-left: 20px;"><a href="">web storm</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-base-station-line" style="color: #ff5828;"></i> -->
-                        <img src="assets/img/toad.jpg" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">Toad for Mysql</a></h3>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4 mt-4">
-                    <div class="icon-box">
-                        <!-- <i class="ri-fingerprint-line" style="color: #29cc61;"></i> -->
-                        <img src="assets/img/adobe.png" width="50px" style="border-radius: 30px;" alt="">
-                        <h3 style="padding-left: 20px;"><a href="">Adobe Photoshop</a></h3>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section><!-- End Features Section -->
-    <section id="popular-courses" class="courses">
-        <div class="container" data-aos="fade-up">
-
-            <div class="section-title">
-                <h2>Courses</h2>
-                <p>Popular Courses</p>
-            </div>
-
-            <div class="row" data-aos="zoom-in" data-aos-delay="100">
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="course-item">
-                        <img src="assets/img/course-1.jpg" class="img-fluid" alt="...">
-                        <div class="course-content">
-                            <div class="d-flex justify-content-between align-items-center mb-3">
-                                <h4>Web Development</h4>
-                                <p class="price">$169</p>
-                            </div>
-
-                            <h3><a href="course-details.html">Website Design</a></h3>
-                            <p>Web development is the building and maintenance of websites; it's the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience. Web developers, or 'devs', do this by using a variety of coding languages.</p>
-                            <div class="trainer d-flex justify-content-between align-items-center">
-                                <div class="trainer-profile d-flex align-items-center">
-                                    <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
-                                    <span> Mr. Sukanta Hui</span>
-                                </div>
-                                <div class="trainer-rank d-flex align-items-center">
-                                    <i class="bx bx-user"></i>&nbsp;50
-                                    &nbsp;&nbsp;
-                                    <i class="bx bx-heart"></i>&nbsp;65
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- End Course Item-->
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-                    <div class="course-item">
-                        <img src="assets/img/course-2.jpg" class="img-fluid" alt="...">
-                        <div class="course-content">
-                            <div class="d-flex justify-content-between align-items-center mb-3">
-                                <h4>Programming Language</h4>
-                                <p class="price">$250</p>
-                            </div>
-
-                            <h3><a href="course-details.html">C Language</a></h3>
-                            <p>The C programming language is a computer programming language that was developed to do system programming for the operating system UNIX and is an imperative programming language. C was developed in the early 1970s by Ken Thompson and Dennis Ritchie at Bell Labs. <br>... C is a compiled language.</p>
-                            <div class="trainer d-flex justify-content-between align-items-center">
-                                <div class="trainer-profile d-flex align-items-center">
-                                    <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
-                                    <span>Mrs.Tanushree Hui</span>
-                                </div>
-                                <div class="trainer-rank d-flex align-items-center">
-                                    <i class="bx bx-user"></i>&nbsp;35
-                                    &nbsp;&nbsp;
-                                    <i class="bx bx-heart"></i>&nbsp;42
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- End Course Item-->
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-                    <div class="course-item">
-                        <img src="assets/img/course-3.jpg" class="img-fluid" alt="...">
-                        <div class="course-content">
-                            <div class="d-flex justify-content-between align-items-center mb-3">
-                                <h4>SQL</h4>
-                                <p class="price">$180</p>
-                            </div>
-
-                            <h3><a href="course-details.html">Structured Query Language</a></h3>
-                            <p>SQL stands for Structured Query Language. SQL lets you access and manipulate databases. SQL became a standard of the American National Standards Institute (ANSI) in 1986, and of the International Organization for Standardization (ISO) in 1987.</p>
-                            <div class="trainer d-flex justify-content-between align-items-center">
-                                <div class="trainer-profile d-flex align-items-center">
-                                    <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-                                    <span>Miss. Sreeparna Das</span>
-                                </div>
-                                <div class="trainer-rank d-flex align-items-center">
-                                    <i class="bx bx-user"></i>&nbsp;20
-                                    &nbsp;&nbsp;
-                                    <i class="bx bx-heart"></i>&nbsp;85
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- End Course Item-->
-
-            </div>
-
-        </div>
-    </section><!-- End Popular Courses Section -->
+    <app-why-us></app-why-us>
+    <app-features></app-features>
+    <app-popular-courses></app-popular-courses>
     <section class="content-section bg-primary text-white text-center" id="services">
         <div class="container px-4 px-lg-5">
             <div class="content-section-heading">
@@ -337,72 +90,10 @@
         </div>
     </section>
 
+
+
     <!-- ======= Trainers Section ======= -->
-    <section id="trainers" class="trainers">
-        <div class="container" data-aos="fade-up">
-
-            <div class="row" data-aos="zoom-in" data-aos-delay="100">
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member">
-                        <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
-                        <div class="member-content">
-                            <h4> Mr. Sukanta Hui</h4>
-                            <span>Mentor</span>
-                            <!-- <p>
-                              Web Developper, Efficient in differrent programming languages
-                            </p> -->
-                            <div class="social">
-                                <a target="_blank" href="https://twitter.com/sukantahui"><i class="bi bi-twitter"></i></a>
-                                <a target="_blank" href="https://www.facebook.com/sukantahui"><i class="bi bi-facebook"></i></a>
-                                <a target="_blank" href="https://www.instagram.com/sukantahui/"><i class="bi bi-instagram"></i></a>
-                                <!-- <a target="_blank" href=""><i class="bi bi-linkedin"></i></a> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member">
-                        <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
-                        <div class="member-content">
-                            <h4>Mrs.Tanushree Hui</h4>
-                            <span>Mentor</span>
-                            <!-- <p>
-
-                            </p> -->
-                            <div class="social">
-                                <a target="_blank" href="https://twitter.com/tanusreehui"><i class="bi bi-twitter"></i></a>
-                                <a target="_blank" href="https://www.facebook.com/tanusree.hui"><i class="bi bi-facebook"></i></a>
-                                <a target="_blank" href="https://www.instagram.com/tanusreehui/"><i class="bi bi-instagram"></i></a>
-                                <!-- <a target="_blank" href=""><i class="bi bi-linkedin"></i></a> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-                    <div class="member">
-                        <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
-                        <div class="member-content">
-                            <h4>Miss. Sreeparna Das</h4>
-                            <span>Mentor</span>
-                            <!-- <p>
-                              Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
-                            </p> -->
-                            <div class="social">
-                                <a target="_blank" href="https://twitter.com/sreeparna94"><i class="bi bi-twitter"></i></a>
-                                <a target="_blank" href="https://www.facebook.com/profile.php?id=100006890506105"><i class="bi bi-facebook"></i></a>
-                                <a target="_blank" href="https://www.instagram.com/sreeparna83/"><i class="bi bi-instagram"></i></a>
-                                <!-- <a target="_blank" href=""><i class="bi bi-linkedin"></i></a> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </section><!-- End Trainers Section -->
+    <app-trainer></app-trainer>
 
     <!-- Portfolio-->
     <section class="content-section" id="portfolio">
