--- a/institution_angular/src/app/pages/home/trainer/trainer.component.html
+++ b/institution_angular/src/app/pages/home/trainer/trainer.component.html
@@ -2,8 +2,8 @@
 <section id="trainers" class="trainers">
     <div class="container" data-aos="fade-up">
 
-        <div class="row" data-aos="zoom-in" data-aos-delay="100">
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+        <div class="row" >
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-right" data-aos-duration="3000" data-aos-easing="linear" data-aos-delay="1000">
                 <div class="member">
                     <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
                     <div class="member-content">
@@ -22,7 +22,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up-right" data-aos-duration="3000" data-aos-easing="linear" data-aos-delay="1000">
                 <div class="member">
                     <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt="">
                     <div class="member-content">
@@ -41,7 +41,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-left" data-aos-duration="3000" data-aos-easing="linear" data-aos-delay="1000">
                 <div class="member">
                     <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
                     <div class="member-content">
