--- a/institution_angular/src/app/pages/home/trainer/trainer.component.html
+++ b/institution_angular/src/app/pages/home/trainer/trainer.component.html
@@ -1,7 +1,6 @@
 <!-- ======= Trainers Section ======= -->
 <section id="trainers" class="trainers">
-    <div class="container" data-aos="fade-up">
-
+    <div class="container pt-2" data-aos="fade-up">
         <div class="row" >
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-right" data-aos-duration="3000" data-aos-easing="linear" data-aos-delay="1000">
                 <div class="member">
