--- a/institution_angular/src/app/pages/home/menu/menu-item/menu-item.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-item/menu-item.component.html
@@ -5,18 +5,18 @@
   <span *ngFor="let child of items">
     <!-- Handle branch node menu items -->
     <span *ngIf="child.children && child.children.length > 0">
-      <button mat-menu-item color="primary" [matMenuTriggerFor]="menu.childMenu" >
+      <a  mat-menu-item [matMenuTriggerFor]="menu.childMenu" >
         <mat-icon>{{child.iconName}}</mat-icon>
         <span>{{child.displayName}}</span>
-      </button>
+      </a>
       <app-menu-item #menu [items]="child.children"></app-menu-item>
     </span>
     <!-- Handle leaf node menu items -->
     <span *ngIf="!child.children || child.children.length === 0">
-      <button mat-menu-item [routerLink]="child.route">
+      <a mat-menu-item [routerLink]="child.route">
         <mat-icon>{{child.iconName}}</mat-icon>
         <span>{{child.displayName}}</span>
-      </button>
+      </a>
     </span>
   </span>
 </mat-menu>
