--- a/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-owner/menu-owner.component.html
@@ -1,3 +1,4 @@
+<h4>Owner</h4>
 <div class="basic-container">
     <div class="menu-bar mat-elevation-z1">
     <div class="container" fxFill *ngFor="let item of navItems">
